--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp": "^3.9.0",
     "gulp-elm": "^0.2.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-shell": "^0.5.2",
     "gulp-uglify": "^1.5.1",
     "gulp-watch": "^4.3.5"
   }
