--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Opinionated Tiled tool for Elm",
   "main": "Gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "elm-test tests/TestRunner.elm"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "coffee-script": "^1.10.0",
     "gulp": "^3.9.0",
     "gulp-elm": "^0.2.0",
     "gulp-plumber": "^1.0.1",
